--- a/customize.css
+++ b/customize.css
@@ -87,3 +87,226 @@
         display: none;
     }
 }
+
+/*styles for contact page - feel free to change it*/
+#container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+h1 {
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
+    font-size: 48px;
+}
+
+#map-and-text-container {
+    display: flex;
+    margin-top: 20px;
+}
+
+#map-container,
+#text-container {
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+#map {
+    width: 50vw;
+    height: 400px;
+}
+
+#text {
+    background-color: #fff;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#additional-boxes {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+    width: 95%;
+    box-sizing: border-box;
+}
+
+.additional-box {
+    width: calc(33.33% - 25px); 
+    margin: 10px;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.additional-box h2 {
+     margin-bottom: 10px; 
+}
+
+.additional-box button {
+    background-color: #4169E1;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+/*end of contact page styles*/
+
+/*styles for team page*/
+.testimonials {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    color: #9e9e9e;
+    display: inline-block;
+    font-family: 'Roboto', Arial, sans-serif;
+    font-size: 16px;
+    margin: 10px;
+    max-width: 310px;
+    min-width: 250px;
+    height: 425px;
+    position: relative;
+    text-align: center;
+    width: 100%;
+    background-color: #ffffff;
+    border-radius: 5px;
+    border-top: 5px solid #d2652d;
+  }
+
+  .testimonials figcaption {
+    padding: 10% 10% 8%;
+    height: 100%;
+  }
+
+  .testimonials figcaption:before {
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    color: #d2652d;
+    content: "\f10e";
+    font-family: 'FontAwesome';
+    font-size: 32px;
+    font-style: normal;
+    left: 50%;
+    line-height: 60px;
+    position: absolute;
+    top: -30px;
+    width: 60px;
+  }
+
+  .testimonials h3 {
+    color: #3c3c3c;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 24px;
+    margin: 10px 0 5px;
+  }
+
+  .testimonials h4 {
+    font-weight: 400;
+    margin: 0;
+    opacity: 0.5;
+  }
+
+  .testimonials blockquote {
+    font-style: italic;
+    font-weight: 300;
+    margin: 0 0 20px;
+  }
+
+  .testimonials blockquote p {
+  line-height: 2.2; 
+}
+
+  .comment-form {
+    max-width: 500px;
+    margin: 10px;
+    padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  .comment-form label {
+    display: block;
+    margin-bottom: 8px;
+  }
+
+  .comment-form input,
+  .comment-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 16px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
+  .comment-form button {
+    background-color: #4169E1;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+    transition: background-color 0.3s;
+  }
+
+  .comment-form button:hover {
+    background-color: #555;
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    height: auto;
+  }
+
+  .image-container {
+    margin: 40px;
+    width: 25%;
+    position: relative;
+    overflow: hidden;
+  }
+
+  .image-container img {
+    width: 100%;
+    border-radius: 5px;
+    transition: transform 0.3s, opacity 0.3s;
+  }
+
+  .image-container:hover img {
+    transform: scale(1.1);
+    opacity: 0.8;
+  }
+
+  .image-container h2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 38px;
+    font-weight: 600;
+    margin: 0;
+    opacity: 0;
+    transition: opacity 0.6s;
+  }
+
+  .image-container:hover h2 {
+    opacity: 1;
+  }
+  /*end of styles for team page*/
