--- a/customize.css
+++ b/customize.css
@@ -75,13 +75,20 @@
         display: block;
     }
 
+
     .nav-item {
         margin-left: 0;
+        margin-bottom: 20px;
+        margin-top: 20px;
     }
 
     #gridContainer {
         margin: 0;
     }
+
+    header.bg-light{
+        height: 40px;
+    };
 }
 
 @media (min-width: 768px) {
@@ -93,4 +100,8 @@
     #gridContainer {
         margin: 0;
     }
+
+    header.bg-light{
+        height: 46px;
+    };
 }
