--- a/customize3.css
+++ b/customize3.css
@@ -22,7 +22,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     color: #d2652d;
     content: "\f10e";
-    font-family: 'FontAwesome';
+    font-family: 'FontAwesome', serif;
     font-size: 32px;
     font-style: normal;
     left: 50%;
